// DBML generated by Personal-Guru script
// Generated at: Wed Jan  7 02:11:58 PM CST 2026

Table topics {
  id INTEGER [pk, not null]
  user_id VARCHAR(100) [not null]
  name VARCHAR(255) [not null]
  created_at DATETIME
  study_plan JSON
}

Table chat_sessions {
  id INTEGER [pk, not null]
  topic_id INTEGER [not null, unique]
  history JSON
  updated_at DATETIME
}

Table study_steps {
  id INTEGER [pk, not null]
  topic_id INTEGER [not null]
  step_index INTEGER [not null]
  title VARCHAR(255)
  content TEXT
  questions JSON
  user_answers JSON
  feedback JSON
  score FLOAT
  chat_history JSON
}

Table quizzes {
  id INTEGER [pk, not null]
  topic_id INTEGER [not null]
  questions JSON
  score FLOAT
  result JSON
  created_at DATETIME
}

Table flashcards {
  id INTEGER [pk, not null]
  topic_id INTEGER [not null]
  term VARCHAR(255) [not null]
  definition TEXT [not null]
}

Table users {
  username VARCHAR(100) [pk, not null]
  password_hash VARCHAR(255)
  name VARCHAR(100)
  age INTEGER
  country VARCHAR(100)
  primary_language VARCHAR(100)
  education_level VARCHAR(100)
  field_of_study VARCHAR(100)
  occupation VARCHAR(100)
  learning_goals TEXT
  prior_knowledge TEXT
  learning_style VARCHAR(100)
  time_commitment VARCHAR(100)
  preferred_format VARCHAR(100)
}

Ref: topics.user_id > users.username
Ref: chat_sessions.topic_id > topics.id
Ref: study_steps.topic_id > topics.id
Ref: quizzes.topic_id > topics.id
Ref: flashcards.topic_id > topics.id
